package domain.ropa;

public interface Estado {
  public double precioFinal(double precioBase);
}
