package domain.ropa;

public enum TipoPrenda {
  SACO,
  PANTALON,
  CAMISA
}
// Al agregarlo a un Enum directamente, queda muy escalable, de manera tal que si hay mas Tipos
// los mismos se pueden agregar con facilidad a la lista de arriba